# question_generation

./: .gitignore  README.md  hello.py  pyproject.toml  ruff.toml
apps/: answerSpanExtraction.py  distilBERTKeyword.py  distractors.py  keywordExtraction.py  llama_distractors.py  questionGeneration.py  raceKeyword.py  rakeKeyword.py  s2vdistractors.py  summarization.py  t5distractors.py
apps/modules/: keyword_chunking.py
mysite/: settings.py  urls.py
quesGens/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
quesGens/static/css/: style.css  styles.css
quesGens/static/js/: index.js
quesGens/templates/quesGens/: base.html  history.html  index.html  result.html  test.html  test_results.html
