[project]
name = "question-answering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.16",
    "flashtext==2.7",
    "networkx==2.6",
    "pke",
    "scipy==1.8.0",
    "sense2vec==2.0.1",
    "sentence-transformers==2.2.2",
    "sentencepiece==0.1.95",
    "strsim==0.0.3",
    "textwrap3==0.9.2",
    "transformers==4.28.1",
]

[tool.uv.sources]
pke = { git = "https://github.com/boudinfl/pke.git" }
